syntax = "proto3";
package admin;
option go_package = ".;mall";

import "portal/portal.proto";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

// 会员注册
message MemberRegisterReq {
  string username = 1 [(validate.rules).string.min_len = 1];  // 用户名
  string password = 2 [(validate.rules).string.min_len = 1];  // 密码
  string telephone = 3 [(validate.rules).string.min_len = 1]; // 手机号码
  string auth_code = 4 [(validate.rules).string.min_len = 1]; //
}

// 会员登录
message MemberLoginReq {
  string username = 1 [(validate.rules).string.min_len = 1];  // 用户名
  string password = 2 [(validate.rules).string.min_len = 1];  // 密码
}

message MemberLoginRsp {
  string token = 1; // 凭证
  string token_head = 2; // 凭证请求头
}

// 获取会员信息
message MemberInfoReq {

}

// 获取验证码
message MemberGetAuthCodeReq {
  string telephone = 1; // 验证码
}
message MemberGetAuthCodeRsp {
  string auth_code = 1;
}

// 修改密码
message MemberUpdatePasswordReq {
  string telephone = 1 [(validate.rules).string.min_len = 1]; // 手机号码
  string password = 2 [(validate.rules).string.min_len = 1];  // 密码
  string auth_code = 3 [(validate.rules).string.min_len = 1]; //
}
message MemberUpdatePasswordRsp {

}

// 刷新token
message MemberRefreshTokenReq {

}
message MemberRefreshTokenRsp {

}

message MemberInfoRsp {
  // 账号信息
  uint64 id = 1; // 用户id
  string username = 2; // 用户名
  string password = 3; // 密码

  // 基本信息
  string nickname = 4; // 昵称
  string icon = 5; // 头像
  uint32 gender = 6; // 性别：0->未知；1->男；2->女
  uint32 birthday = 7; // 生日，格式为YYYYMMDD
  string personalized_signature = 8; // 个性签名
  string phone = 9; // 手机号码
  string city = 10; // 所在城市
  string job = 11; // 职业

  // 会员等级信息
  uint64 member_level_id = 12; // 会员等级id
  uint32 source_type = 13; // 用户来源

  // 业务字段
  uint32 integration = 14; // 积分
  uint32 growth = 15; // 成长值
  uint32 luckey_count = 16; // 剩余抽奖次数
  uint32 history_integration = 17; // 历史积分数量

  // 账号状态
  uint32 status = 18; // 帐号启用状态:0->禁用；1->启用
  uint32 create_time = 19; // 注册时间
}

// 会员登录注册管理
service PortalMemberApi {
  // 会员注册
  rpc MemberRegister(MemberRegisterReq) returns (EmptyRsp) {
    option (google.api.http) = {
      post: "/sso/register"
      body: "*"
    };
  }

  // 会员登录
  rpc MemberLogin(MemberLoginReq) returns (MemberLoginRsp) {
    option (google.api.http) = {
      post: "/sso/login"
      body: "*"
    };
  }

  // 获取会员信息
  rpc MemberInfo(MemberInfoReq) returns (MemberInfoRsp) {
    option (google.api.http) = {
      get: "/sso/info"
    };
  }

  // 获取验证码
  rpc MemberGetAuthCode(MemberGetAuthCodeReq) returns (MemberGetAuthCodeRsp) {
    option (google.api.http) = {
      get: "/sso/getAuthCode"
    };
  }

  // 修改密码
  rpc MemberUpdatePassword(MemberUpdatePasswordReq) returns (MemberUpdatePasswordRsp) {
    option (google.api.http) = {
      post: "/sso/updatePassword"
      body: "*"
    };
  }

  // 刷新token
  rpc MemberRefreshToken(MemberRefreshTokenReq) returns (MemberRefreshTokenRsp) {
    option (google.api.http) = {
      get: "/sso/refreshToken"
    };
  }

}